<resources>
    <string name="app_name">JAKI</string>
    <string name="JSC">Unit Pengelola Jakarta Smart City</string>
    <string name="kirim_ke_email">Kirim email pertanyaan ke tim JSC</string>
    <string name="email_jsc">smartcity@jakarta.go.id</string>
    <string name="cd_kirim_ke_email">Kirim email pertanyaan ke tim JSC smartcity@jakarta.go.id</string>
    <string name="back_action">Kembali ke halaman sebelumnya</string>
    <string name="cari_laporan_action">Cari laporan</string>
    <string name="close_action">Tutup</string>
    <string name="close_custom_action">Tutup instruksi</string>
    <string name="announce_action_read_news">membaca berita</string>
    <string name="announce_action_saved_news">melihat berita yang kamu simpan</string>
    <string name="announce_action_send_email">mengirim email</string>
    <string name="announce_action_see_berita_jakarta">melihat Berita Jakarta</string>
    <string name="announce_action_unliked">tidak menyukai berita ini</string>
    <string name="announce_action_liked">menyukai berita ini</string>
    <string name="announce_action_unbookmarked">tidak menyimpan</string>
    <string name="announce_action_bookmarked">menyimpan</string>
    <string name="announce_action_share">membagikan</string>
    <string name="announce_action_copy">menyalin</string>
    <string name="announce_action_search_news">mencari berita</string>
    <string name="announce_action_view_all_news">melihat semua berita</string>
    <string name="announce_action_change_photo">mengganti foto</string>
    <string name="announce_action_edit_location">mengedit lokasi</string>
    <string name="close_custom_action_edit_location">Tutup edit lokasi laporan</string>
    <string name="no_news_data">Tidak ada data berita yang ditampilkan</string>
    <string name="not_found_email_app">Tidak ada aplikasi email yang ditemukan</string>
    <string name="not_found_search_news">Tidak ditemukan berita yang sesuai dengan pencarian</string>
    <string name="camera_permission_granted">Camera permission request granted</string>
    <string name="camera_permission_denied">Camera permission request denied</string>
    <string name="failed_show_camera">Gagal menampilkan kamera</string>
    <string name="failed_take_image">Gagal mengambil gambar</string>
    <string name="no_image_selected">Tidak ada gambar yang dipilih</string>
    <string name="location_permission_granted">Location permission request granted</string>
    <string name="location_permission_denied">Location permission request denied</string>
    <string name="location_not_found">Lokasi tidak ditemukan</string>
    <string name="title_news">Berita</string>
    <string name="hai_smartcitizen">Hai, Smartcitizen!</string>
    <string name="desc_news">Temukan informasi dan berita resmi Jakarta yang bebas hoaks di sini.</string>
    <string name="hint_search_news">Coba cari berita resmi Jakarta</string>
    <string name="title_akses_cepat">Akses Cepat Berita yang Kamu Butuhkan</string>
    <string name="title_berita_jakarta">Berita Jakarta</string>
    <string name="title_majalah_jakita">Majalah JaKita</string>
    <string name="title_informasi_terkini">Informasi Terkini</string>
    <string name="lihat_lebih_banyak">Lihat Lebih Banyak Informasi Terkini</string>
    <string name="title_saved_news">Lihat Berita yang Kamu Simpan</string>
    <string name="berita_disimpan">Berita Disimpan</string>
    <string name="title_tidak_menemukan">Tidak Menemukan yang Kamu Cari?</string>
    <string name="thumbnail_label">Gambar dari artikel %1$s</string>
    <string name="share">SHARE:</string>
    <string name="title_share">Bagikan berita ini</string>
    <string name="share_fb">Bagikan di Facebook</string>
    <string name="share_twitter">Bagikan di Twitter</string>
    <string name="share_email">Bagikan ke Email</string>
    <string name="share_link">Salin tautan berita ini</string>
    <string name="copy_to_clipboard">Tautan berita disalin ke clipboard!</string>
    <string name="email_body_template">Baca berita menarik ini: %1$s\n\n%2$s</string>
    <string name="no_likes">Belum ada yang menyukai</string>
    <string name="you_and_others_liked">Anda dan %d orang menyukai</string>
    <string name="x_people_liked">%d orang menyukai</string>
    <string name="liked_state">Disukai</string>
    <string name="not_liked_state">Tidak disukai</string>
    <string name="liked_announcement">Anda menyukai berita ini</string>
    <string name="unliked_announcement">Anda tidak lagi menyukai berita ini</string>
    <string name="save_news">Simpan berita %s</string>
    <string name="saved_news">Berita %s tersimpan</string>
    <string name="bookmarked_state">Tersimpan</string>
    <string name="not_bookmarked_state">Belum tersimpan</string>
    <string name="bookmarked_announcement">Berita %s telah disimpan</string>
    <string name="unbookmarked_announcement">Berita %s tidak lagi disimpan</string>
    <string name="unbookmarked">Batalkan menyimpan berita %s</string>
    <string name="no_news_saved">Belum ada berita yang kamu simpan</string>
    <string name="likes">%1$s suka</string>
    <string name="share_news">Bagikan berita: %1$s ke media sosial atau aplikasi lainnya</string>
    <string name="cd_likes_and_date">Disukai oleh %1$s orang, tanggal %2$s</string>
    <string name="news_date">Tanggal %1$s</string>
    <string name="display_search_results_news">Menampilkan hasil untuk \"%1$s\"</string>
    <string name="search_result_news_count">%1$d berita ditemukan</string>
    <string name="no_news_found">Tidak ada berita ditemukan</string>
    <string name="announce_action_search_report">mencari laporan</string>
    <string name="announce_action_make_report">membuat laporan</string>
    <string name="announce_action_close_info">menutup</string>
    <string name="title_laporan_warga">Laporan Warga</string>
    <string name="title_questions">Mengalami Masalah di Jakarta?\nBuat Laporan Warga Yuk!</string>
    <string name="buat_laporan_foto">Buat Laporan Foto</string>
    <string name="buat_laporan_video">Buat Laporan Video</string>
    <string name="link_pelajari">Belum Pernah Melapor?\n<a href="https://www.youtube.com/watch?v=WQuqiV2HQtU">Pelajari cara membuat laporan di sini</a></string>
    <string name="title_eksplor_laporan_warga">Eksplor Laporan Warga</string>
    <string name="lihat_laporan_warga_lainnya">Lihat laporan warga lainnya</string>
    <string name="pantau_laporan">Pantau laporan yang kamu buat</string>
    <string name="ketahui_kondisi_laporan">Ketahui kondisi terbaru laporan yang kamu minati</string>
    <string name="cari_laporan">Cari laporan</string>
    <string name="butuh_bantuan_lebih_lanjut">Butuh Bantuan Lebih Lanjut?</string>
    <string name="announce_instruction_sheet">Instruksi sebelum membuat laporan</string>
    <string name="title_sheet">Sudah siap untuk membuat laporanmu?</string>
    <string name="desc_title_sheet">Baca ini dulu sebelum membuat laporan ya!</string>
    <string name="desc_tindak_lanjut_laporan">Hanya laporan terkait permasalahan di Jakarta saja yang akan ditindaklanjuti</string>
    <string name="title_tindak_lanjut_laporan">Tindak Lanjut Laporan</string>
    <string name="title_lokasi_laporan">Lokasi Laporan</string>
    <string name="desc_lokasi_laporan">Lokasi laporan kamu diambil secara otomatis berdasarkan lokasi yang tersimpan saat pengambilan foto</string>
    <string name="title_laporan_privat_rahasia">Laporan Privat/Rahasia</string>
    <string name="desc_laporan_privat">Jenis laporanmu akan otomatis terpilih privat atau rahasia. Tetap pakai jenis laporan ini jika kamu ingin laporanmu tidak terlihat oleh siapapun kecuali dirimu sendiri dan petugas</string>
    <string name="title_laporan_publik">Laporan Publik</string>
    <string name="desc_laporan_publik">Ubah jenis laporan menjadi Publik pada laman Tinjau Laporan jika kamu ingin laporanmu terlihat oleh pengguna JAKI lainnya</string>
    <string name="label_checkbox">Saya mengerti. Jangan tampilkan halaman ini lagi</string>
    <string name="ambil_foto_laporan">Ambil Foto Laporan</string>
    <string name="langkah_1">Langkah 1/5</string>
    <string name="cd_langkah_1">Langkah 1 dari 5</string>
    <string name="action_capture">Ambil foto</string>
    <string name="action_gallery">Ambil gambar dari galeri</string>
    <string name="action_switch_camera">Balik kamera</string>
    <string name="switch_to_front_camera">Ganti ke kamera depan. Saat ini kamera belakang aktif</string>
    <string name="switch_to_back_camera">Ganti ke kamera belakang. Saat ini kamera depan aktif</string>
    <string name="atur_lokasi_laporan">Atur Lokasi Laporan</string>
    <string name="cd_langkah_2">Langkah 2 dari 5</string>
    <string name="langkah_2">Langkah 2/5</string>
    <string name="lokasi_otomatis">(Terdeteksi otomatis berdasarkan lokasi yang tersimpan saat pengambilan foto)</string>
    <string name="lokasi_laporan">Lokasi Laporan</string>
    <string name="gambar_yang_kamu_pilih">Gambar yang kamu pilih</string>
    <string name="sama_dengan_lokasi_foto">Sama dengan lokasi foto</string>
    <string name="cd_switch_lokasi_foto">Lokasi laporan sama dengan lokasi foto</string>
    <string name="action_edit">Edit lokasi laporan</string>
    <string name="atur_lokasi_sendiri">Atur lokasi sendiri</string>
    <string name="lokasi_not_found">Lokasi tidak ditemukan</string>
    <string name="detail_alamat_laporan">Detail Alamat Laporan (opsional)</string>
    <string name="hint_detail_alamat_laporan">(Nama gedung, patokan, keadaan sekitar, dll.)</string>
    <string name="cd_detail_alamat_laporan">Detail ciri khusus lokasi laporan opsional: Nama gedung, patokan, atau keadaan sekitar</string>
    <string name="next">Selanjutnya</string>
    <string name="save">Simpan</string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="detail_address">Detail Alamat</string>
    <string name="announce_instruction_sheet_edit_location">Edit lokasi laporan</string>
    <string name="announce_location_updated">Lokasi laporan berhasil diperbarui</string>
    <string name="announce_action_location_updated">menyimpan lokasi yang diperbarui</string>
    <string name="langkah_3">Langkah 3/5</string>
    <string name="cd_langkah_3">Langkah 3 dari 5</string>
    <string name="tulis_detail_laporan">Tulis Detail Laporan</string>
    <string name="tampilkan_panduan">Tampilkan Panduan</string>
    <string name="cd_tampilkan_panduan">Tampilkan panduan menulis laporan</string>
    <string name="cd_instruksi_panduan_satu">Instruksi pengisian laporan. Ceritakan dengan detail, jelas, dan padat. Kamu bisa tulis deskripsi masalah, waktu kejadian, dan detail lain yang diperlukan.</string>
    <string name="title_instruksi_panduan_satu">Ceritakan dengan detail, jelas dan padat</string>
    <string name="desc_instruksi_panduan_satu">Kamu bisa tulis deskripsi masalah, waktu kejadian, dan detail lain yang diperlukan.</string>
    <string name="cd_instruksi_panduan_dua">Instruksi pengisian laporan. Gunakan rekomendasi kata bantuan. Pilih saran rekomendasi pilihan kata yang tersedia di bawah, kata-kata tersebut akan otomatis tersalin di kotak deskripsi.</string>
    <string name="title_instruksi_panduan_dua">Gunakan rekomendasi kata bantuan</string>
    <string name="pilih_kategori_laporan">Pilih Kategori Laporan</string>
    <string name="cd_langkah_4">Langkah 4 dari 5</string>
    <string name="langkah_4">Langkah 4/5</string>
    <string name="hint_search_category">Coba cari kategori laporan</string>
    <string name="rekomendasi_kategori">Rekomendasi Kategori</string>
    <string name="semua_kategori">Semua Kategori</string>
    <string name="title_pilih_jenis_laporan">Pilih Jenis Laporan</string>
    <string name="option_public">Publik</string>
    <string name="option_private">Privat/Rahasia</string>
</resources>