<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/close_action"
        android:focusable="true"
        android:importantForAccessibility="yes"
        android:padding="14dp"
        android:src="@drawable/ic_close"
        app:tint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/title_sheet"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/plus_jakarta_sans"
        android:text="@string/desc_title_sheet"
        android:textSize="12sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_tindak_lanjut_laporan"
        android:importantForAccessibility="yes">

        <ImageView
            android:id="@+id/iv_point_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_point_one"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:importantForAccessibility="no"
                android:text="@string/title_tindak_lanjut_laporan"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:importantForAccessibility="no"
                android:text="@string/desc_tindak_lanjut_laporan"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_lokasi_laporan">

        <ImageView
            android:id="@+id/iv_point_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_point_two"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:importantForAccessibility="no"
                android:text="@string/title_lokasi_laporan"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:importantForAccessibility="no"
                android:text="@string/desc_lokasi_laporan"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_laporan_privat">

        <ImageView
            android:id="@+id/iv_point_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_point_three"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:importantForAccessibility="no"
                android:text="@string/title_laporan_privat_rahasia"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:importantForAccessibility="no"
                android:text="@string/desc_laporan_privat"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/desc_laporan_publik">

        <ImageView
            android:id="@+id/iv_point_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv_point_four"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:importantForAccessibility="no"
                android:text="@string/title_laporan_publik"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/plus_jakarta_sans"
                android:importantForAccessibility="no"
                android:text="@string/desc_laporan_publik"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_checkbox"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_buat_laporan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center_vertical"
        android:text="@string/buat_laporan_foto" />
</LinearLayout>
