<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".laporan.CameraActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_action_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:contentDescription="@string/back_action"
            android:focusable="true"
            android:importantForAccessibility="yes"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_title_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/ambil_foto_laporan"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_langkah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/cd_langkah_1"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/langkah_1"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_galeri"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/action_gallery"
            app:srcCompat="@drawable/ic_gallery"
            app:tint="@color/white" />

        <Space
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <ImageView
            android:id="@+id/captureImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/action_capture"
            app:srcCompat="@drawable/ic_capture" />

        <Space
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <!--<ImageView
            android:id="@+id/btn_camery_intent"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="Ambil dari camera intent"
            app:srcCompat="@drawable/bj" />-->
    </LinearLayout>

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/action_switch_camera"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_switch_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>