<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:clickable="true"
        android:contentDescription="@string/close_action"
        android:focusable="true"
        android:importantForAccessibility="yes"
        android:padding="12dp"
        android:src="@drawable/ic_close"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-24dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/title_pilih_jenis_laporan"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioPrivat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:paddingHorizontal="8dp"
                android:text="@string/option_private"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioPublik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:paddingHorizontal="8dp"
                android:text="@string/option_public"
                android:textSize="14sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_pilih_jenis_laporan"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/save"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
